refine scrollbar fix so it doesn't hide the title in the second parallax image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -133,7 +133,6 @@ li {
     padding: 1% 5% 5% 5%;
     min-height: 55vh;
     width: calc(100vw + 17px);
-    overflow-x: hidden;
     /* added the negative margin so centered things would still appear centered */
     margin-left: -8px;
 }
